# Aeroflow

./: .gitignore  BEGINNER_GUIDE.md  CONTRIBUTING.md  Cargo.toml  FINAL_SUMMARY.md  Makefile  QUICK_START.md  README.md  UPDATE_SUMMARY.md  WHERE_TO_RUN.md  aeroflow.toml  app_compiled.rs  hello.aefl  install.ps1  install.sh  metadata.json  mytest.aefl  run.bat
aeroflow-backend/: aeroflow.toml  main.aefl
aeroflow-backend/actors/: auth_service.aefl  db_service.aefl  user_service.aefl
aeroflow-backend/agents/: support_agent.aefl
aeroflow-backend/api/: routes.aefl
aeroflow-conformance/tests/runtime/: precedence.aefl
aeroflow-conformance/tests/syntax/: import.aefl
aeroflow-lsp/: Cargo.toml
aeroflow-lsp/src/: main.rs
aerolang/: Cargo.toml
aerolang/examples/: demo_actors.rs  hello.aero
aerolang/src/: actor.rs  aerolang.pest  ast.rs  codegen.rs  compiler.rs  demo.rs  error.rs  executor.rs  fiber.rs  ir.rs  lexer.pest  lib.rs  main.rs  parser.rs  scheduler.rs  step_executor.rs  step_executor_trait.rs  value.rs  vm.rs
cli/: Cargo.toml
cli/src/: main.rs
compiler/: Cargo.toml
compiler/src/: aeroflow.pest  afm.rs  codegen.rs  lib.rs  main.rs
compiler/src/ast/: mod.rs
compiler/src/codegen/: mod.rs
compiler/src/ir/: mod.rs
compiler/src/lexer/: mod.rs
compiler/src/parser/: mod.rs
docs/: ARCHITECTURE.md  CLI_REFERENCE.md  GETTING_STARTED.md  GRAMMAR.ebnf  INSTALL.md  LANGUAGE_SPEC.md  MOBILE_LLVM_PIPELINE.md
examples/: ai_worker.af  hello.af  http_server.af
runtime/: Cargo.toml
runtime/src/: actor.rs  arena.rs  capability.rs  distributed.rs  lib.rs  mailbox.rs  scheduler.rs  supervisor.rs  system.rs  trace.rs  vm_actor.rs  wasm.rs
runtime/src/memory/: mod.rs
runtime/src/sandbox/: mod.rs
runtime/src/vm/: mod.rs
samples/: counter.aefl  logic.aero
shim/: Cargo.toml
shim/src/: docker_bridge.rs  isolation.rs  lib.rs  main.rs
stdlib/: ai.aefl  core.aefl  http.aefl
test_proj/: Cargo.toml
vscode/: package.json
vscode-aeroflow/: README.md  language-configuration.json  package.json
vscode-aeroflow/syntaxes/: aeroflow.tmLanguage.json
vscode/syntaxes/: aeroflow.tmLanguage.json
