[workspace]
resolver = "2"
members = [
    "compiler",
    "runtime",
    "cli",
    "aeroflow-lsp"
]

[workspace.dependencies]
aeroflow-compiler = { path = "./compiler" }
aeroflow-runtime = { path = "./runtime" }
logos = "0.14"
smallvec = "1.13"
bumpalo = "3.16"
hashbrown = "0.15"
byteorder = "1.5"
bytemuck = "1.15"
crossbeam = "0.8"
parking_lot = "0.12"
tokio = { version = "1.37", features = ["full"] }
ndarray = "0.15"
rayon = "1.10"
half = "2.4"
memmap2 = "0.9"
sha2 = "0.10"
ed25519-dalek = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
toml = "0.5"
semver = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
