[package]
name = "aeroflow-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
aerolang = { path = "../aerolang" }
aeroflow-shim = { path = "../shim" }
tokio = { version = "1.0", features = ["full"] } # Future proofing
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
