[package]
name = "aeroflow-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
aeroflow-compiler = { workspace = true }
aeroflow-runtime = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
walkdir = "2.4"
