[package]
name = "aeroflow-compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
logos = { workspace = true }
smallvec = { workspace = true }
bumpalo = { workspace = true }
hashbrown = { workspace = true }
byteorder = { workspace = true }
bytemuck = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
bincode = { workspace = true }

[lib]
path = "src/lib.rs"

[[bin]]
name = "afc"
path = "src/main.rs"
